# xplode-engine

./: .dockerignore  .env  .env.dev  .env.local  .env.production  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  context.txt  create_schema.sql  docker-compose.monitoring.yml  docker-compose.yml  frontend.txt  frontend_request.md  local_backup.sql  mines.db  pnl.sql  treasury-keypair.json
browser-wallet/: Cargo.toml  Dockerfile.browser-wallet  fly.toml
browser-wallet/src/: config.rs  main.rs  metrics.rs  solana.rs
browser-wallet/src/auth/: middleware.rs  mod.rs
browser-wallet/src/security/: mod.rs  rate_limiter.rs
common/: Cargo.toml
common/src/: db.rs  lib.rs  macros.rs  models.rs  telegram.rs  utils.rs
deposit-bg-worker/: Cargo.toml
deposit-bg-worker/src/: main.rs
deposits/: Cargo.toml
deposits/src/: lib.rs  monad.rs  sol.rs
evm-deposits/: Cargo.toml
evm-deposits/src/: lib.rs
grafana-deploy/: Dockerfile  fly.toml  grafana-datasources.yml
grafana/dashboards/: game-server.json
migrations/: 20240318_add_direct_wallet_support.sql  20240327_rename_network_to_currency.sql  20240401_update_leaderboard_types.sql  20240402_add_gif_ids_to_users.sql
prometheus/: prometheus.yml
prometheus-deploy/: fly.toml  prometheus.yml
server/: .env  Cargo.toml  Dockerfile.game-server  fly.toml
server/src/: board.rs  constants.rs  db.rs  discovery.rs  dump.txt  game.rs  game_ws.rs  macros.rs  main.rs  metrics.rs  player.rs  seed_gen.rs  xplode_moves.rs
wallet/: .env  Cargo.toml  Dockerfile.wallet-server  create_schema.sql  fly.toml  insert_dummy_users.sql  mines.db
wallet/src/: db.rs  lib.rs  main.rs  models.rs  payment_client.rs  razorpay_client.rs
wallet/src/razorpay/: mod.rs  models.rs  razorpay_client.rs  razorpayserver.rs
