[package]
name = "browser-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
actix-web.workspace = true
dotenv.workspace = true
actix-cors.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx.workspace = true
common = {path = "../common"}
tracing.workspace = true
tracing-subscriber.workspace = true
evm-deposits = {path = "../evm-deposits"}