[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true