[package]
name = "deposit-bg-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
#deposits = {path = "../deposits"}
anchor-lang.workspace = true
redis.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
tokio.workspace = true
anyhow.workspace = true
common = {path = "../common"}
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true